ad tmux configuration

--- a/tmux.conf
+++ b/tmux.conf
@@ -11,6 +11,14 @@
 #     export LANG=ja_JP.UTF-8
 #     export TERM="xterm-256color"
 #     export COLORTERM="gnome-terminal"
+#     alias pbcopy='xsel --clipboard --input'
+#     alias pbpaste='xsel --clipboard --output'
+#     ```
+# And apt-get install
+#     ```
+#     # use pbcopy (MacOS X installed, default )
+#
+#     $ sudo apt-get install xsel
 #     ```
 #
 ###########################################################
@@ -22,18 +30,14 @@ set -g default-terminal "screen-256color"
 setw -g utf8 on
 set -g status-utf8 on
 
-###########################################################
-# Keyboard & Mouse setting
-###########################################################
+set -g history-limit 10000
+set -g repeat-time 100 # pane移動時やcopy-mode切替時にrepeatされてうざいので短くする
 
-# クリップボード共有を有効化
-#set-option -g default-command "reattach-to-user-namespace -l zsh
-
-# ESCの効きが悪いので設定
-set -s escape-time 0
-
-# マウス操作を有効化
-#set-window-option -g mode-mouse on
+set -g status on
+set -g status-utf8 on
+# custom status-line
+# set -g status-right '#[fg=blue,bold]#H#[default] #[fg=green]» #[fg=yellow]#(cut -d " " -f 1-3 /proc/loadavg) #[fg=green]» #[fg=cyan]#S#[default] #[fg=green]» #[fg=red]#(acpi | cut -d "," -f 2 | sed "s/^ *//g") #[fg=green]» #[fg=magenta]%R#[default]'
+# set -g status-right-length 45
 
 ###########################################################
 # Keybind setting
@@ -68,9 +72,47 @@ bind -r l select-pane -R
 #change pane size
 unbind +
 unbind -
-unbind '('
-unbind ')'
+unbind '<'
+unbind '>'
 bind -r + resize-pane -U 4
 bind -r - resize-pane -D 4
-bind -r '(' resize-pane -L 4
-bind -r ')' resize-pane -R 4
+bind -r '<' resize-pane -L 4
+bind -r '>' resize-pane -R 4
+
+
+###########################################################
+# Clipboard & Mouse setting
+###########################################################
+
+# ESCの効きが悪いので設定
+set -s escape-time 0
+
+setw -g mouse-select-pane on
+setw -g mouse-resize-pane on
+setw -g mouse-select-window on
+# マウスによるcopy-mode切替を無効化
+# terminalのcopy機能を使いたいシーンがありそうなため
+setw -g mode-mouse on
+setw -g mode-keys vi # copy-mode時にvi likeに操作
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+
+
+unbind [
+bind -r [ copy-mode
+unbind ]
+bind -r ] paste-buffer
+unbind y
+bind -r y paste-buffer
+
+bind-key > save-buffer ~/.tmux-buffer \; run-shell 'pbcopy < ~/.tmux-buffer' \; display "Copied to clipboard."
+#bind-key < if-shell 'xsel -b -o > ~/.tmux-buffer' 'load-buffer ~/.tmux-buffer ; paste-buffer'
+
+# for Mac OS X
+# bind -r ] paste-buffer -s \015  # for mac?
+# bind-key -t vi-copy v begin-selection
+# bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+# # Update default binding of `Enter` to also use copy-pipe
+# unbind -t vi-copy Enter
+# bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+
