add description for pbcopy (clipboard)

--- a/tmux.conf
+++ b/tmux.conf
@@ -4,6 +4,7 @@
 #     cd ~
 #     git clone dotfiles https://github.com/uorat/dotfiles.git
 #     ln -s dotfiles/tmux.conf .tmux.conf
+#     sudo ln -s dotfiles/pbcopy /usr/local/bin/pbcopy
 #     ```
 #
 # And add setting to bashrc|bash_profile
@@ -11,8 +12,6 @@
 #     export LANG=ja_JP.UTF-8
 #     export TERM="xterm-256color"
 #     export COLORTERM="gnome-terminal"
-#     alias pbcopy='xsel --clipboard --input'
-#     alias pbpaste='xsel --clipboard --output'
 #     ```
 # And apt-get install
 #     ```
