add tmux settings (pbcopy, ...etc)

--- a/tmux.conf
+++ b/tmux.conf
@@ -78,6 +78,8 @@ bind -r - resize-pane -D 4
 bind -r '<' resize-pane -L 4
 bind -r '>' resize-pane -R 4
 
+# off replace pane
+unbind space
 
 ###########################################################
 # Clipboard & Mouse setting
@@ -101,11 +103,16 @@ unbind [
 bind -r [ copy-mode
 unbind ]
 bind -r ] paste-buffer
+unbind V
+bind -r V copy-mode
 unbind y
 bind -r y paste-buffer
 
-bind-key > save-buffer ~/.tmux-buffer \; run-shell 'pbcopy < ~/.tmux-buffer' \; display "Copied to clipboard."
-#bind-key < if-shell 'xsel -b -o > ~/.tmux-buffer' 'load-buffer ~/.tmux-buffer ; paste-buffer'
+# copy from tmux buffer to clipboard
+#unbind Y
+bind-key -t vi-copy y copy-pipe "pbcopy"
+# copy from tmux buffer to clipboar (old)
+#bind-key Y save-buffer ~/.tmux-buffer \; run-shell 'pbcopy < ~/.tmux-buffer' \; display "Copied to clipboard."
 
 # for Mac OS X
 # bind -r ] paste-buffer -s \015  # for mac?
