--- a/tmux.conf
+++ b/tmux.conf
@@ -78,6 +78,9 @@ bind -r - resize-pane -D 4
 bind -r '<' resize-pane -L 4
 bind -r '>' resize-pane -R 4
 
+bind e setw synchronize-panes on
+bind E setw synchronize-panes off
+
 # off replace pane
 unbind space
 
