last work on future

--- a/tmux.conf
+++ b/tmux.conf
@@ -22,7 +22,7 @@
 #
 ###########################################################
 
-# use 256color
+# use 256color (Comment out below when using Mac OS X)
 set -g default-terminal "screen-256color"
 
 # for Japanese
