--- a/tmux.conf
+++ b/tmux.conf
@@ -23,7 +23,7 @@
 ###########################################################
 
 # use 256color (Comment out below when using Mac OS X)
-set -g default-terminal "screen-256color"
+# set -g default-terminal "screen-256color"
 
 # for Japanese
 setw -g utf8 on
@@ -109,16 +109,18 @@ bind -r y paste-buffer
 
 # copy from tmux buffer to clipboard
 setw -g mode-keys vi # copy-mode時にvi likeに操作
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "pbcopy"
-# copy from tmux buffer to clipboar (old)
-#unbind Y
-#bind-key Y save-buffer ~/.tmux-buffer \; run-shell 'pbcopy < ~/.tmux-buffer' \; display "Copied to clipboard."
+# # for Ubuntu
+# bind-key -t vi-copy v begin-selection
+# bind-key -t vi-copy y copy-pipe "pbcopy"
+
+# # copy from tmux buffer to clipboar (old)
+# unbind Y
+# bind-key Y save-buffer ~/.tmux-buffer \; run-shell 'pbcopy < ~/.tmux-buffer' \; display "Copied to clipboard."
 
 # for Mac OS X
-# bind -r ] paste-buffer -s \015  # for mac?
-# bind-key -t vi-copy v begin-selection
-# bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+bind -r ] paste-buffer -s \015  # for mac?
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 # # Update default binding of `Enter` to also use copy-pipe
 # unbind -t vi-copy Enter
 # bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
