--- a/tmux.conf
+++ b/tmux.conf
@@ -24,6 +24,8 @@
 
 # use 256color
 set -g default-terminal "screen-256color"
+# enable yunc for vim on tmux
+set-option -g default-command "reattach-to-user-namespace -l bash"
 
 # for Japanese
 setw -g utf8 on
@@ -98,6 +100,7 @@ setw -g mouse-select-window on
 # terminalのcopy機能を使いたいシーンがありそうなため
 setw -g mode-mouse on
 
+setw -g mode-keys vi # copy-mode時にvi likeに操作
 unbind [
 bind -r [ copy-mode
 unbind ]
@@ -108,18 +111,10 @@ unbind y
 bind -r y paste-buffer
 
 # copy from tmux buffer to clipboard
-setw -g mode-keys vi # copy-mode時にvi likeに操作
 bind-key -t vi-copy v begin-selection
 bind-key -t vi-copy y copy-pipe "pbcopy"
-# copy from tmux buffer to clipboar (old)
-#unbind Y
-#bind-key Y save-buffer ~/.tmux-buffer \; run-shell 'pbcopy < ~/.tmux-buffer' \; display "Copied to clipboard."
 
 # for Mac OS X
-# bind -r ] paste-buffer -s \015  # for mac?
-# bind-key -t vi-copy v begin-selection
-# bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
-# # Update default binding of `Enter` to also use copy-pipe
-# unbind -t vi-copy Enter
-# bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
-
+unbind -t vi-copy Enter
+bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
