[tmux] support tmux 2.1 and 2.0 before

--- a/tmux.conf
+++ b/tmux.conf
@@ -53,7 +53,6 @@ bind C-y send-prefix
 # reload .tmux.conf
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
-
 # like vi cursor movement
 
 #split pane
@@ -93,12 +92,10 @@ unbind space
 # ESCの効きが悪いので設定
 set -s escape-time 0
 
-setw -g mouse-select-pane on
-setw -g mouse-resize-pane on
-setw -g mouse-select-window on
-# マウスによるcopy-mode切替を無効化
-# terminalのcopy機能を使いたいシーンがありそうなため
-setw -g mode-mouse on
+# mouse & scroll event
+if-shell 'test $(echo "$(tmux -V | awk \{print\ \$2\}) > 2.0" | bc) -ne 0' \
+  'source-file ~/dotfiles/tmux-mouse-event_2.1.conf' \
+  'source-file ~/dotfiles/tmux-mouse-event_2.0.conf'
 
 setw -g mode-keys vi # copy-mode時にvi likeに操作
 unbind [
