[tmux] diable  unneeded setting of ESC

--- a/tmux.conf
+++ b/tmux.conf
@@ -53,6 +53,9 @@ bind C-y send-prefix
 # reload .tmux.conf
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
+# confirm key binds
+bind / list-keys -t vi-copy
+
 # like vi cursor movement
 
 #split pane
@@ -90,7 +93,7 @@ unbind space
 ###########################################################
 
 # ESCの効きが悪いので設定
-set -s escape-time 0
+#set -s escape-time 0
 
 # mouse & scroll event
 if-shell 'test $(echo "$(tmux -V | awk \{print\ \$2\}) > 2.0" | bc) -ne 0' \
