--- a/tmux.conf
+++ b/tmux.conf
@@ -27,15 +27,15 @@
 # TODO # enable yunc for vim on tmux
 # set-option -g default-command "reattach-to-user-namespace -l bash"
 
-# for Japanese
-setw -g utf8 on
-set -g status-utf8 on
-
+set -g status on
 set -g history-limit 10000
 set -g repeat-time 100 # pane移動時やcopy-mode切替時にrepeatされてうざいので短くする
 
-set -g status on
-set -g status-utf8 on
+# for Japanese (v2.1 or later)
+if-shell 'test $(echo "$(tmux -V | awk \{print\ \$2\}) > 2.1" | bc) -eq 0' \
+  'setw -g utf8 on; set -g status-utf8 on' \
+  ''
+
 # custom status-line
 # set -g status-right '#[fg=blue,bold]#H#[default] #[fg=green]» #[fg=yellow]#(cut -d " " -f 1-3 /proc/loadavg) #[fg=green]» #[fg=cyan]#S#[default] #[fg=green]» #[fg=red]#(acpi | cut -d "," -f 2 | sed "s/^ *//g") #[fg=green]» #[fg=magenta]%R#[default]'
 # set -g status-right-length 45
