[tmux] set colorschema of tmux & use tmux plugin manager (tpm)

--- a/tmux.conf
+++ b/tmux.conf
@@ -36,9 +36,27 @@ if-shell 'test $(echo "$(tmux -V | awk \{print\ \$2\}) > 2.1" | bc) -eq 0' \
   'setw -g utf8 on; set -g status-utf8 on' \
   ''
 
+############################################################
 # custom status-line
+############################################################
+
+# color-schema
+#   - fx: https://github.com/seebi/tmux-colors-solarized
+#   - installation
+#       - [tmux 1.9 or later]   tpm (tmux plugin manager), define EOF.
+#       - [tmux 1.8 or older]   source-file configuration of tmux-colors-solarized
+
+if-shell 'test $(echo "$(tmux -V | awk \{print\ \$2\}) > 1.9" | bc) -eq 0' \
+  'source-file ~/dotfiles/tmuxcolors-256.conf' \
+  ''
+
+set-option -g status-position top
+set-option -g status-left-length 90
+set-option -g status-right-length 90
+set-option -g status-left '#H:[paneNo:#P]'
+set-option -g status-right '# [%Y-%m-%d(%a) %H:%M] #[default]'
+set-option -g status-justify centre
 # set -g status-right '#[fg=blue,bold]#H#[default] #[fg=green]» #[fg=yellow]#(cut -d " " -f 1-3 /proc/loadavg) #[fg=green]» #[fg=cyan]#S#[default] #[fg=green]» #[fg=red]#(acpi | cut -d "," -f 2 | sed "s/^ *//g") #[fg=green]» #[fg=magenta]%R#[default]'
-# set -g status-right-length 45
 
 ###########################################################
 # Keybind setting
@@ -90,10 +108,18 @@ unbind space
 
 ###########################################################
 # Clipboard & Mouse setting
+#
+# [cheetsheet]
+#   - enter copy-mode               : C-[ or C-V
+#   - begin selection:              : [copy-mode] v or Space
+#   - copy selection w/ clipboard   : [copy-mode] y
+#   - copy selection w/o clipboard) : [copy-mode] Enter
+#   - copy w/ clipboard & paste     : [copy-mode] M-y
+#   - copy w/o clipboard & paste    : [copy-mode] Y
+#
+# fx. https://github.com/tmux-plugins/tmux-yank
+#
 ###########################################################
-
-# ESCの効きが悪いので設定
-#set -s escape-time 0
 
 # mouse & scroll event
 if-shell 'test $(echo "$(tmux -V | awk \{print\ \$2\}) > 2.0" | bc) -ne 0' \
@@ -101,27 +127,38 @@ if-shell 'test $(echo "$(tmux -V | awk \{print\ \$2\}) > 2.0" | bc) -ne 0' \
   'source-file ~/dotfiles/tmux-mouse-event_2.0.conf'
 
 setw -g mode-keys vi # copy-mode時にvi likeに操作
+
 unbind [
 bind -r [ copy-mode
-unbind ]
-bind -r ] paste-buffer
 unbind V
 bind -r V copy-mode
-unbind y
-bind -r y paste-buffer
+unbind ]
+bind -r ] paste-buffer
+bind-key -t vi-copy v begin-selection
 
-# copy from tmux buffer to clipboard
+### tmux 1.8 or older
 
 # # for Ubuntu
-# bind-key -t vi-copy v begin-selection
 # bind-key -t vi-copy y copy-pipe "pbcopy"
 
-# # copy from tmux buffer to clipboar (old)
-# unbind Y
-# bind-key Y save-buffer ~/.tmux-buffer \; run-shell 'pbcopy < ~/.tmux-buffer' \; display "Copied to clipboard."
+# # for Mac OS X
+# unbind -t vi-copy Enter
+# bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+# bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 
-# for Mac OS X
-bind-key -t vi-copy v begin-selection
-unbind -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+############################################################
+# TPM (tmux plugin manager) configurations
+#   fx. https://github.com/tmux-plugins/tpm
+############################################################
+
+# List of plugins
+set-option -g @plugin 'tmux-plugins/tpm'
+set-option -g @plugin 'seebi/tmux-colors-solarized'
+set-option -g @plugin 'tmux-plugins/tmux-yank'
+
+  # tmux-plugins/tmux-open           \
+  # tmux-plugins/tmux-resurrect      \
+  # tmux-plugins/tmux-battery        \
+  # tmux-plugins/tmux-pain-control   \
+
+run '~/.tmux/plugins/tpm/tpm'
