--- a/tmux.conf
+++ b/tmux.conf
@@ -54,8 +54,9 @@ set-option -g status-position top
 set-option -g status-left-length 90
 set-option -g status-right-length 90
 set-option -g status-left '#H:[paneNo:#P]'
-set-option -g status-right '# [%Y-%m-%d(%a) %H:%M] #[default]'
+set-option -g status-right '# [%Y-%m-%d(%a) %H:%M:%S]'
 set-option -g status-justify centre
+set-option -g status-interval 1
 # set -g status-right '#[fg=blue,bold]#H#[default] #[fg=green]» #[fg=yellow]#(cut -d " " -f 1-3 /proc/loadavg) #[fg=green]» #[fg=cyan]#S#[default] #[fg=green]» #[fg=red]#(acpi | cut -d "," -f 2 | sed "s/^ *//g") #[fg=green]» #[fg=magenta]%R#[default]'
 
 ###########################################################
