[tmux] fixed plugin load bugs on tmux 1.8

--- a/tmux.conf
+++ b/tmux.conf
@@ -24,8 +24,6 @@
 
 # # use 256color (Comment out below when using Mac OS X)
 # set -g default-terminal "screen-256color"
-# TODO # enable yunc for vim on tmux
-# set-option -g default-command "reattach-to-user-namespace -l bash"
 
 set -g status on
 set -g history-limit 10000
@@ -39,16 +37,6 @@ if-shell 'test $(echo "$(tmux -V | awk \{print\ \$2\}) > 2.1" | bc) -eq 0' \
 ############################################################
 # custom status-line
 ############################################################
-
-# color-schema
-#   - fx: https://github.com/seebi/tmux-colors-solarized
-#   - installation
-#       - [tmux 1.9 or later]   tpm (tmux plugin manager), define EOF.
-#       - [tmux 1.8 or older]   source-file configuration of tmux-colors-solarized
-
-if-shell 'test $(echo "$(tmux -V | awk \{print\ \$2\}) > 1.9" | bc) -eq 0' \
-  'source-file ~/dotfiles/tmuxcolors-256.conf' \
-  ''
 
 set-option -g status-position top
 set-option -g status-left-length 90
@@ -137,7 +125,7 @@ unbind ]
 bind -r ] paste-buffer
 bind-key -t vi-copy v begin-selection
 
-### tmux 1.8 or older
+### tmux 1.8 or older ( w/o tpm)
 
 # # for Ubuntu
 # bind-key -t vi-copy y copy-pipe "pbcopy"
@@ -150,6 +138,12 @@ bind-key -t vi-copy v begin-selection
 ############################################################
 # TPM (tmux plugin manager) configurations
 #   fx. https://github.com/tmux-plugins/tpm
+#
+# color-schema
+#   - fx: https://github.com/seebi/tmux-colors-solarized
+#   - installation
+#       - [tmux 1.9 or later]   tpm (tmux plugin manager), define EOF.
+#       - [tmux 1.8 or older]   source-file configuration of tmux-colors-solarized
 ############################################################
 
 # List of plugins
@@ -162,4 +156,7 @@ set-option -g @plugin 'tmux-plugins/tmux-yank'
   # tmux-plugins/tmux-battery        \
   # tmux-plugins/tmux-pain-control   \
 
-run '~/.tmux/plugins/tpm/tpm'
+
+if-shell 'test $(echo "$(tmux -V | awk \{print\ \$2\}) > 1.9" | bc) -eq 0' \
+  'source-file ~/dotfiles/tmuxcolors-256.conf' \
+  'run "~/.tmux/plugins/tpm/tpm"'
