--- a/tmuxcolors-256.conf
+++ b/tmuxcolors-256.conf
@@ -30,5 +30,5 @@ set-option -g display-panes-colour colour166 #orange
 # clock
 set-window-option -g clock-mode-colour colour64 #green
 
-# bell
-set-window-option -g window-status-bell-style fg=colour235,bg=colour160 #base02, red
+# bell -> disabled (by uorat)
+# set-window-option -g window-status-bell-style fg=colour235,bg=colour160 #base02, red
