[tmux] renumber windows

--- a/tmux.conf
+++ b/tmux.conf
@@ -29,6 +29,7 @@ set -g status on
 set -g history-limit 10000
 set -g repeat-time 100 # pane移動時やcopy-mode切替時にrepeatされてうざいので短くする
 
+
 # for Japanese (v2.1 or later)
 if-shell 'test $(echo "$(tmux -V | awk \{print\ \$2\}) > 2.1" | bc) -eq 0' \
   'setw -g utf8 on; set -g status-utf8 on' \
@@ -38,6 +39,7 @@ if-shell 'test $(echo "$(tmux -V | awk \{print\ \$2\}) > 2.1" | bc) -eq 0' \
 # custom status-line
 ############################################################
 
+set-option -g renumber-windows on
 set-option -g status-position top
 set-option -g status-left-length 90
 set-option -g status-right-length 90
