--- a/tmux.conf
+++ b/tmux.conf
@@ -43,6 +43,8 @@ set-option -g renumber-windows on
 set-option -g status-position top
 set-option -g status-left-length 90
 set-option -g status-right-length 90
+set-option -g status-left '#H:[paneNo:#P]'
+set-option -g status-right 'Batt: #{battery_icon} #{battery_percentage} #{battery_remain} | [%Y/%m/%d(%a) %H:%M:%S]'
 set-option -g status-justify centre
 set-option -g status-interval 1
 set-option -g status-left '#H:[paneNo:#P]'
