--- a/tmux.conf
+++ b/tmux.conf
@@ -44,7 +44,7 @@ set-option -g status-position top
 set-option -g status-left-length 90
 set-option -g status-right-length 90
 set-option -g status-left '#H:[paneNo:#P]'
-set-option -g status-right '# [%Y-%m-%d(%a) %H:%M:%S]'
+set-option -g status-right 'Batt: #{battery_icon} #{battery_percentage} #{battery_remain} | [%Y/%m/%d(%a) %H:%M:%S]'
 set-option -g status-justify centre
 set-option -g status-interval 1
 # set -g status-right '#[fg=blue,bold]#H#[default] #[fg=green]» #[fg=yellow]#(cut -d " " -f 1-3 /proc/loadavg) #[fg=green]» #[fg=cyan]#S#[default] #[fg=green]» #[fg=red]#(acpi | cut -d "," -f 2 | sed "s/^ *//g") #[fg=green]» #[fg=magenta]%R#[default]'
@@ -107,6 +107,7 @@ unbind space
 #   - copy selection w/o clipboard) : [copy-mode] Enter
 #   - copy w/ clipboard & paste     : [copy-mode] M-y
 #   - copy w/o clipboard & paste    : [copy-mode] Y
+#   - open selected url & file      : [copy-mode] o
 #
 # fx. https://github.com/tmux-plugins/tmux-yank
 #
@@ -141,21 +142,26 @@ bind-key -t vi-copy v begin-selection
 # TPM (tmux plugin manager) configurations
 #   fx. https://github.com/tmux-plugins/tpm
 #
-# color-schema
+# color-schema [tmux-colors-solarized]
 #   - fx: https://github.com/seebi/tmux-colors-solarized
 #   - installation
 #       - [tmux 1.9 or later]   tpm (tmux plugin manager), define EOF.
 #       - [tmux 1.8 or older]   source-file configuration of tmux-colors-solarized
+#
+# tmux-open usage
+#   - open selected url & file      : [copy-mode] o
+#
 ############################################################
 
 # List of plugins
 set-option -g @plugin 'tmux-plugins/tpm'
 set-option -g @plugin 'seebi/tmux-colors-solarized'
 set-option -g @plugin 'tmux-plugins/tmux-yank'
+set-option -g @plugin 'tmux-plugins/tmux-battery'
+set-option -g @plugin 'tmux-plugins/tmux-open'
 
   # tmux-plugins/tmux-open           \
   # tmux-plugins/tmux-resurrect      \
-  # tmux-plugins/tmux-battery        \
   # tmux-plugins/tmux-pain-control   \
 
 
