--- a/tmux.conf
+++ b/tmux.conf
@@ -43,11 +43,13 @@ set-option -g renumber-windows on
 set-option -g status-position top
 set-option -g status-left-length 90
 set-option -g status-right-length 90
-set-option -g status-left '#H:[paneNo:#P]'
-set-option -g status-right 'Batt: #{battery_icon} #{battery_percentage} #{battery_remain} | [%Y/%m/%d(%a) %H:%M:%S]'
 set-option -g status-justify centre
 set-option -g status-interval 1
-# set -g status-right '#[fg=blue,bold]#H#[default] #[fg=green]» #[fg=yellow]#(cut -d " " -f 1-3 /proc/loadavg) #[fg=green]» #[fg=cyan]#S#[default] #[fg=green]» #[fg=red]#(acpi | cut -d "," -f 2 | sed "s/^ *//g") #[fg=green]» #[fg=magenta]%R#[default]'
+set-option -g status-left '#H:[paneNo:#P]'
+
+if-shell 'test $(echo "$(tmux -V | awk \{print\ \$2\}) > 1.9" | bc) -eq 0' \
+  'set-option -g status-right "#{prefix_highlight} Online: #{online_status} | CPU: #{cpu_icon} #{cpu_percentage} | Batt: #{battery_icon} #{battery_percentage} #{battery_remain} | [%Y/%m/%d(%a) %H:%M:%S] #u"' \
+  'set -g status-right "#[fg=blue,bold]#H#[default] #[fg=green]» #[fg=yellow]#(cut -d " " -f 1-3 /proc/loadavg) #[fg=green]» #[fg=cyan]#S#[default] #[fg=green]» #[fg=red]#(acpi | cut -d "," -f 2 | sed "s/^ *//g") #[fg=green]» #[fg=magenta]%R#[default]"'
 
 ###########################################################
 # Keybind setting
@@ -159,6 +161,9 @@ set-option -g @plugin 'seebi/tmux-colors-solarized'
 set-option -g @plugin 'tmux-plugins/tmux-yank'
 set-option -g @plugin 'tmux-plugins/tmux-battery'
 set-option -g @plugin 'tmux-plugins/tmux-open'
+set-option -g @plugin 'tmux-plugins/tmux-cpu'
+set-option -g @plugin 'tmux-plugins/tmux-online-status'
+set-option -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 
   # tmux-plugins/tmux-open           \
   # tmux-plugins/tmux-resurrect      \
