[tmux] fixed bugs of status line on tmux 1.8.

--- a/tmux.conf
+++ b/tmux.conf
@@ -35,22 +35,6 @@ if-shell 'test $(echo "$(tmux -V | awk \{print\ \$2\}) > 2.1" | bc) -eq 0' \
   'setw -g utf8 on; set -g status-utf8 on' \
   ''
 
-############################################################
-# custom status-line
-############################################################
-
-set-option -g renumber-windows on
-set-option -g status-position top
-set-option -g status-left-length 90
-set-option -g status-right-length 90
-set-option -g status-justify centre
-set-option -g status-interval 1
-set-option -g status-left '#H:[paneNo:#P]'
-
-if-shell 'test $(echo "$(tmux -V | awk \{print\ \$2\}) > 1.9" | bc) -eq 0' \
-  'set-option -g status-right "#{prefix_highlight} Online: #{online_status} | CPU: #{cpu_icon} #{cpu_percentage} | Batt: #{battery_icon} #{battery_percentage} #{battery_remain} | [%Y/%m/%d(%a) %H:%M:%S] #u"' \
-  'set -g status-right "#[fg=blue,bold]#H#[default] #[fg=green]» #[fg=yellow]#(cut -d " " -f 1-3 /proc/loadavg) #[fg=green]» #[fg=cyan]#S#[default] #[fg=green]» #[fg=red]#(acpi | cut -d "," -f 2 | sed "s/^ *//g") #[fg=green]» #[fg=magenta]%R#[default]"'
-
 ###########################################################
 # Keybind setting
 ###########################################################
@@ -169,7 +153,19 @@ set-option -g @plugin 'tmux-plugins/tmux-prefix-highlight'
   # tmux-plugins/tmux-resurrect      \
   # tmux-plugins/tmux-pain-control   \
 
+############################################################
+# customize status-line
+############################################################
 
+set-option -g renumber-windows on
+set-option -g status-position top
+set-option -g status-left-length 90
+set-option -g status-right-length 90
+set-option -g status-justify centre
+set-option -g status-interval 1
+set-option -g status-left '#H:[paneNo:#P / sessNo:#S]'
+
+# enable status line & run tpm (tpm supported tmux 1.9 or later)
 if-shell 'test $(echo "$(tmux -V | awk \{print\ \$2\}) > 1.9" | bc) -eq 0' \
-  'source-file ~/dotfiles/tmuxcolors-256.conf' \
-  'run "~/.tmux/plugins/tpm/tpm"'
+  'source-file ~/dotfiles/tmuxcolors-256.conf; set-option -g status-right "#H #[fg=green]» #[fg=yellow]CPU Load avg: #(cut -d \" \" -f 1-3 /proc/loadavg) #[fg=green]» #[fg=magenta][%Y/%m/%d(%a) %H:%M:%S]"' \
+  'set-option -g status-right "#{prefix_highlight} Online: #{online_status} | CPU: #{cpu_icon} #{cpu_percentage} | Batt: #{battery_icon} #{battery_percentage} #{battery_remain} | [%Y/%m/%d(%a) %H:%M:%S]"; run "~/.tmux/plugins/tpm/tpm"'
