--- a/tmux.conf
+++ b/tmux.conf
@@ -163,9 +163,9 @@ set-option -g status-left-length 90
 set-option -g status-right-length 90
 set-option -g status-justify centre
 set-option -g status-interval 1
-set-option -g status-left '#H:[paneNo:#P / sessNo:#S]'
+set-option -g status-left '#(whoami)@#H:[paneNo:#P / sessNo:#S]'
 
 # enable status line & run tpm (tpm supported tmux 1.9 or later)
 if-shell 'test $(echo "$(tmux -V | awk \{print\ \$2\}) > 1.9" | bc) -eq 0' \
-  'source-file ~/dotfiles/tmuxcolors-256.conf; set-option -g status-right "#H #[fg=green]» #[fg=yellow]CPU Load avg: #(cut -d \" \" -f 1-3 /proc/loadavg) #[fg=green]» #[fg=magenta][%Y/%m/%d(%a) %H:%M:%S]"' \
-  'set-option -g status-right "#{prefix_highlight} Online: #{online_status} | CPU: #{cpu_icon} #{cpu_percentage} | Batt: #{battery_icon} #{battery_percentage} #{battery_remain} | [%Y/%m/%d(%a) %H:%M:%S]"; run "~/.tmux/plugins/tpm/tpm"'
+  'source-file ~/dotfiles/tmuxcolors-256.conf; set-option -g status-right "#H #[fg=green]» #[fg=blue]CPU Load avg: #(cut -d \" \" -f 1-3 /proc/loadavg) #[fg=green]» #[fg=magenta][%Y/%m/%d(%a) %H:%M:%S] #[default]| #(whoami)"' \
+  'set-option -g status-right "#{prefix_highlight} Online: #{online_status} | CPU: #{cpu_icon} #{cpu_percentage} | Batt: #{battery_icon} #{battery_percentage} #{battery_remain} | [%Y/%m/%d(%a) %H:%M:%S] | #(whoami)"; run "~/.tmux/plugins/tpm/tpm"'
