--- a/tmux.conf
+++ b/tmux.conf
@@ -168,4 +168,4 @@ set-option -g status-left '#(whoami)@#H:[paneNo:#P / sessNo:#S]'
 # enable status line & run tpm (tpm supported tmux 1.9 or later)
 if-shell 'test $(echo "$(tmux -V | awk \{print\ \$2\}) > 1.9" | bc) -eq 0' \
   'source-file ~/dotfiles/tmuxcolors-256.conf; set-option -g status-right "#H #[fg=green]» #[fg=blue]CPU Load avg: #(cut -d \" \" -f 1-3 /proc/loadavg) #[fg=green]» #[fg=magenta][%Y/%m/%d(%a) %H:%M:%S] #[default]| #(whoami)"' \
-  'set-option -g status-right "#{prefix_highlight} Online: #{online_status} | CPU: #{cpu_icon} #{cpu_percentage} | Batt: #{battery_icon} #{battery_percentage} #{battery_remain} | [%Y/%m/%d(%a) %H:%M:%S] | #(whoami)"; run "~/.tmux/plugins/tpm/tpm"'
+  'set-option -g status-right "#{prefix_highlight} Online: #{online_status} #[default]» #[fg=blue]CPU: #{cpu_icon} #{cpu_percentage} #[default]» #[fg=red]Batt: #{battery_icon} #{battery_percentage} #{battery_remain} #[default]» #[fg=magenta][%Y/%m/%d(%a) %H:%M:%S] #[default]| #(whoami)"; run "~/.tmux/plugins/tpm/tpm"'
