[tmux] support tmux 2.4

--- a/tmux-mouse-event_2.0.conf
+++ b/tmux-mouse-event_2.0.conf
@@ -4,3 +4,20 @@ setw -g mouse-select-pane on
 setw -g mouse-resize-pane on
 setw -g mouse-select-window on
 setw -g mode-mouse on
+
+bind-key -t vi-copy v begin-selection
+bind / list-keys -t vi-copy
+
+# like vi cursor movement
+
+
+### tmux 1.8 or older ( w/o tpm)
+
+# # for Ubuntu
+# bind-key -t vi-copy y copy-pipe "pbcopy"
+
+# # for Mac OS X
+# unbind -t vi-copy Enter
+# bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+# bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+
