--- a/tmux-mouse-event_2.1.conf
+++ b/tmux-mouse-event_2.1.conf
@@ -3,3 +3,7 @@
 set -g mouse on
 bind -n WheelUpPane   select-pane -t= \; copy-mode -e \; send-keys -M
 bind -n WheelDownPane select-pane -t= \;                 send-keys -M
+
+bind-key -T copy-mode-vi 'v' send -X begin-selection
+bind / list-keys -T copy-mode-vi
+
