--- a/tmux-mouse-event_2.4.conf
+++ b/tmux-mouse-event_2.4.conf
@@ -7,3 +7,6 @@ bind -n WheelDownPane select-pane -t= \;                 send-keys -M
 bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind / list-keys -T copy-mode-vi
 
+# for Mac OS X
+set -g default-shell $SHELL
+set -g default-command "reattach-to-user-namespace -l ${SHELL}"
