[tmux] Change tmux stable version on homebrew to 2.3, so disable configuration for head version (master)

--- a/tmux-mouse-event_2.3.conf
+++ b/tmux-mouse-event_2.3.conf
@@ -4,7 +4,7 @@ set -g mouse on
 bind -n WheelUpPane   select-pane -t= \; copy-mode -e \; send-keys -M
 bind -n WheelDownPane select-pane -t= \;                 send-keys -M
 
-bind-key -T copy-mode-vi 'v' send -X begin-selection
+bind-key -t vi-copy v begin-selection
 bind / list-keys -T copy-mode-vi
 
 # for Mac OS X
