Re-setting for tmux v2.9a

--- a/tmux-mouse-event_2.3.conf
+++ b/tmux-mouse-event_2.3.conf
@@ -4,9 +4,10 @@ set -g mouse on
 bind -n WheelUpPane   select-pane -t= \; copy-mode -e \; send-keys -M
 bind -n WheelDownPane select-pane -t= \;                 send-keys -M
 
-bind-key -t vi-copy v begin-selection
+bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind / list-keys -T copy-mode-vi
 
 # for Mac OS X
-set -g default-shell $SHELL
-set -g default-command "reattach-to-user-namespace -l ${SHELL}"
+# set -g default-shell $SHELL
+# set -g default-command "reattach-to-user-namespace -l ${SHELL}"
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
